Zenlytic data model update

--- a/views/people_pulse_events_view.yml
+++ b/views/people_pulse_events_view.yml
@@ -2,6 +2,7 @@ version: 1
 type: view
 name: people_pulse_events
 model_name: peoplepulse_model
+description: The user id is a uuid for a unique person, and the customer id is the id of that person that connects to a known customer
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_EVENTS
 default_date: event_time
 identifiers:
