--- a/views/people_pulse_nps_survey_view.yml
+++ b/views/people_pulse_nps_survey_view.yml
@@ -3,6 +3,7 @@ type: view
 name: people_pulse_nps_survey
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_NPS_SURVEY
+default_date: survey_date
 identifiers:
 - name: customer_id
   type: primary
@@ -23,7 +24,27 @@ fields:
   type: number
   sql: ${TABLE}."SURVEY_SCORE"
 
+- name: survey_date
+  field_type: dimension_group
+  type: time
+  datatype: timestamp
+  timeframes:
+    - raw
+    - date
+    - day_of_year
+    - week
+    - week_of_year
+    - month
+    - month_of_year
+    - quarter
+    - year
+  sql: CURRENT_DATE
 
+- name: average_nps_survey_score
+  field_type: measure
+  type: average
+  sql: ${survey_score}
+  
 # To help you get started with defining fields, we've included a quick guide which you can delete at any time.
 # The following keys are required for all fields. All the fields above have been created based on the columns
 # in your table.
