--- a/views/people_pulse_nps_survey_view.yml
+++ b/views/people_pulse_nps_survey_view.yml
@@ -44,6 +44,12 @@ fields:
   field_type: measure
   type: average
   sql: ${survey_score}
+
+
+- name: count_nps_survey_quizes
+  field_type: measure
+  type: count
+  sql: ${customer_id}
   
 # To help you get started with defining fields, we've included a quick guide which you can delete at any time.
 # The following keys are required for all fields. All the fields above have been created based on the columns
