Zenlytic data model update

--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -2,3 +2,9 @@ connection: demo
 name: peoplepulse_model
 type: model
 version: 1
+
+access_grants:
+- name: exec_only
+  user_attribute: department
+  allowed_values:
+  - Executive
