--- a/views/people_pulse_marketing_spend_view.yml
+++ b/views/people_pulse_marketing_spend_view.yml
@@ -68,6 +68,7 @@ fields:
   type: sum
   description: The total sum of marketing spend.
   sql: ${spend}
+  value_format_name: usd
 
 - name: total_reach
   field_type: measure
