--- a/views/people_pulse_session_view.yml
+++ b/views/people_pulse_session_view.yml
@@ -79,12 +79,14 @@ fields:
   type: count
   description: The total number of sessions recorded
   sql: ${session_id}
+  value_format_name: decimal_0
 
 - name: unique_users
   field_type: measure
   type: count_distinct
   description: The count of unique users
   sql: ${user_id}
+  value_format_name: decimal_0
 
 - name: average_bounce_rate
   field_type: measure
@@ -103,6 +105,7 @@ fields:
   type: sum
   description: The total number of page views across all sessions
   sql: ${page_views}
+  value_format_name: decimal_0
 
 - name: average_page_views_per_session
   field_type: measure
