--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -1,6 +1,6 @@
 version: 1
 type: view
-name: people_pulse_account
+name: account
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_ACCOUNT
 default_date: contract_start_date
