--- a/views/people_pulse_employee_view.yml
+++ b/views/people_pulse_employee_view.yml
@@ -1,6 +1,6 @@
 version: 1
 type: view
-name: people_pulse_employee
+name: employee
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_EMPLOYEE
 identifiers:
