--- a/views/people_pulse_nps_survey_view.yml
+++ b/views/people_pulse_nps_survey_view.yml
@@ -1,6 +1,6 @@
 version: 1
 type: view
-name: people_pulse_nps_survey
+name: nps_survey
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_NPS_SURVEY
 default_date: survey_date
