--- a/views/people_pulse_ticket_view.yml
+++ b/views/people_pulse_ticket_view.yml
@@ -3,6 +3,7 @@ type: view
 name: ticket
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_TICKET
+default_date: ticket_date
 identifiers:
 - name: ticket_id
   type: primary
@@ -44,6 +45,22 @@ fields:
   type: string
   sql: ${TABLE}."ISSUE_TYPE"
   searchable: true
+
+- name: ticket_date
+  field_type: dimension_group
+  type: time
+  datatype: timestamp
+  timeframes:
+    - raw
+    - date
+    - day_of_year
+    - week
+    - week_of_year
+    - month
+    - month_of_year
+    - quarter
+    - year
+  sql: ${TABLE}."TICKET_DATE"
 
 - name: ticket_count
   field_type: measure
