Zenlytic data model update

--- a/views/people_pulse_employee_view.yml
+++ b/views/people_pulse_employee_view.yml
@@ -37,6 +37,7 @@ fields:
   required_access_grants: [exec_only]
 
 - name: role
+  label: Role
   field_type: dimension
   type: string
   sql: ${TABLE}."ROLE"
