Zenlytic data model update

--- a/views/people_pulse_mrr_view.yml
+++ b/views/people_pulse_mrr_view.yml
@@ -58,6 +58,18 @@ fields:
       name: date_raw
       window_choice: max
 
+- name: total_arr
+  field_type: measure
+  type: sum
+  description: The total annual recurring revenue.
+  sql: ${mrr} * 12
+  value_format_name: usd
+  synonyms:
+    - sales
+  non_additive_dimension:
+      name: date_raw
+      window_choice: max
+
 # To help you get started with defining fields, we've included a quick guide which you can delete at any time.
 # The following keys are required for all fields. All the fields above have been created based on the columns
 # in your table.
