--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -50,7 +50,7 @@ fields:
     type: string
     sql: ${TABLE}."INDUSTRY"
     searchable: true
-  - name: contract_end_date
+  - name: renewal_date
     field_type: dimension_group
     type: time
     datatype: timestamp
