Zenlytic data model update

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -17,6 +17,7 @@ fields:
     field_type: dimension
     type: number
     sql: ${TABLE}."ANNUAL_REVENUE"
+    hidden: true
   - name: contact_email
     field_type: dimension
     type: string
