Zenlytic data model update

--- a/views/people_pulse_plan_view.yml
+++ b/views/people_pulse_plan_view.yml
@@ -40,6 +40,7 @@ fields:
   type: sum
   description: The sum of daily quotas for all sales representatives.
   sql: ${daily_quota}
+  value_format_name: usd
 
 - name: quota_attainment
   field_type: measure
@@ -47,7 +48,8 @@ fields:
   is_merged_result: true
   description: The total closed won in usd divided by the sum of daily quotas for all sales representatives.
   sql:  ${sales_pipeline.closed_won_usd} / nullif(${total_daily_quota}, 0)
-  
+  value_format_name: percent_1
+
 # To help you get started with defining fields, we've included a quick guide which you can delete at any time.
 # The following keys are required for all fields. All the fields above have been created based on the columns
 # in your table.
