--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -8,3 +8,23 @@ access_grants:
   user_attribute: department
   allowed_values:
   - Executive
+
+mappings:
+  channel:
+    fields:
+    - marketing_spend.channel
+    - sales_pipeline.channel
+    description: The marketing channel that the customer came through before entering the pipeline.
+    group_label: Acquisition
+  source:
+    fields:
+    - sales_pipeline.source
+    - marketing_spend.source
+    description: The marketing source that the customer came through before entering the pipeline.
+    group_label: Acquisition
+  campaign:
+    fields:
+    - sales_pipeline.campaign
+    - marketing_spend.campaign
+    description: The marketing campaign that the customer came through before entering the pipeline.
+    group_label: Acquisition
