Zenlytic data model update

--- a/views/people_pulse_nps_survey_view.yml
+++ b/views/people_pulse_nps_survey_view.yml
@@ -6,8 +6,9 @@ sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_NPS_SURVEY
 default_date: survey_date
 identifiers:
 - name: customer_id
-  type: primary
+  type: foreign
   sql: ${customer_id}
+  allowed_fanouts: [event]
 fields:
 - name: customer_id
   field_type: dimension
