--- a/views/people_pulse_nps_survey_view.yml
+++ b/views/people_pulse_nps_survey_view.yml
@@ -10,6 +10,12 @@ identifiers:
   sql: ${customer_id}
   allowed_fanouts: [events]
 fields:
+- name: id
+  field_type: dimension
+  type: number
+  sql: ${TABLE}."ID"
+  hidden: true
+  primary_key: true
 - name: customer_id
   field_type: dimension
   type: number
