--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -37,7 +37,7 @@ fields:
   - name: size
     field_type: dimension
     type: number
-    sql: ${TABLE}."SIZE"
+    sql: ${TABLE}."SIZE1"
   - name: contact_name
     field_type: dimension
     type: string
