--- a/views/people_pulse_session_view.yml
+++ b/views/people_pulse_session_view.yml
@@ -1,8 +1,9 @@
 version: 1
 type: view
 name: web_session
+description: The sessions are just for the marketing site, so we don't have information
+  on logged in users of the product
 model_name: peoplepulse_model
-description: The sessions are just for the marketing site, so we don't have information on logged in users of the product
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_SESSION
 default_date: timestamp
 identifiers:
@@ -27,6 +28,7 @@ fields:
   field_type: dimension
   type: string
   sql: ${TABLE}."LOCATION"
+  searchable: false
 
 - name: bounce_rate
   field_type: dimension
@@ -37,6 +39,7 @@ fields:
   field_type: dimension
   type: string
   sql: ${TABLE}."REFERRER"
+  searchable: false
 
 - name: session_duration
   field_type: dimension
@@ -52,11 +55,13 @@ fields:
   field_type: dimension
   type: string
   sql: ${TABLE}."DEVICE_TYPE"
+  searchable: true
 
 - name: browser
   field_type: dimension
   type: string
   sql: ${TABLE}."BROWSER"
+  searchable: true
 
 - name: timestamp
   field_type: dimension_group
@@ -78,15 +83,15 @@ fields:
   field_type: measure
   type: count
   description: The total number of sessions recorded
-  sql: ${session_id}
   value_format_name: decimal_0
+  sql: ${session_id}
 
 - name: unique_users
   field_type: measure
   type: count_distinct
   description: The count of unique users
-  sql: ${user_id}
   value_format_name: decimal_0
+  sql: ${user_id}
 
 - name: average_bounce_rate
   field_type: measure
@@ -104,54 +109,11 @@ fields:
   field_type: measure
   type: sum
   description: The total number of page views across all sessions
-  sql: ${page_views}
   value_format_name: decimal_0
+  sql: ${page_views}
 
 - name: average_page_views_per_session
   field_type: measure
   type: average
   description: The average number of page views per session
   sql: ${page_views}
-
-
-# To help you get started with defining fields, we've included a quick guide which you can delete at any time.
-# The following keys are required for all fields. All the fields above have been created based on the columns
-# in your table.
-
-# - name: (Required) Name of the field. This is used to reference the field in the data model.
-#   field_type: The type of field. This can be 'dimension', 'measure', or 'dimension_group'.
-#   type: This is the data type for a field.
-#         For dimensions, this can be: string, yesno, tier, number
-#         For measures, this is an aggregation type: number, sum, average, count, count_distinct
-#         For dimension groups this can be: time, duration
-#   sql: (Required) This is the SQL expression for the field. You can reference other fields in the table by
-#        using the `name` of the field. For example, if you have a field with name: 'revenue' in the view
-#        'orders', you can reference it as: ${orders.revenue}.
-#        For more information, see https://docs.zenlytic.com/docs/data_modeling/
-#
-
-# The following keys are optional but useful for providing additional context to the field in the UI and Zoe.
-#
-#   label: The is the user-facing label for the field, displayed in the UI and used by Zoe in chat.
-#          It's different from the `name` field, which is used for referencing the field in the data model.
-#
-#   description: This is used to provide context to users about the field.
-#
-#   searchable: This allows Zenlytic to index the categories and allows Zoe to properly use filters.
-#               For example, if you have a field called 'state' and you want to be able to filter
-#               on different states, you would set this to 'yes'.
-#
-#   zoe_description: This is used to provide context to Zoe about the field.
-#                    When this is not provided, Zoe will use the description field.
-#
-#   hidden: This is used to hide the field from both the UI and Zoe. By default, this is set to 'no'.
-#
-#   value_format_name: This is the format to use when displaying the field. Follow this link to see the
-#                      available formats. https://docs.zenlytic.com/docs/data_modeling/formatting
-#
-#   synonyms: This is a list of strings that act as synonyms for the field label.
-#
-#   filters: This is a list of filters that can be applied to the field.
-#
-# For a comprehensive list of options that can be specified for a field, or for more detailed information,
-# please visit: https://docs.zenlytic.com/docs/data_modeling/data_modeling
