Zenlytic data model update

--- a/views/people_pulse_customer_view.yml
+++ b/views/people_pulse_customer_view.yml
@@ -19,6 +19,8 @@ fields:
   type: number
   sql: ${TABLE}."ACCOUNT_ID"
 
+# hello how are you
+
 - name: customer_id
   field_type: dimension
   type: number
