--- a/views/people_pulse_invoice_view.yml
+++ b/views/people_pulse_invoice_view.yml
@@ -41,6 +41,10 @@ fields:
   - month
   - month_of_year
   - quarter
+  - fiscal_month
+  - fiscal_quarter
+  - fiscal_quarter_of_year
+  - fiscal_year
   - year
   sql: ${TABLE}."INVOICE_DATE"
 
