--- a/views/people_pulse_plan_view.yml
+++ b/views/people_pulse_plan_view.yml
@@ -31,7 +31,10 @@ fields:
   - week_of_year
   - month
   - month_of_year
-  - quarter
+  - fiscal_month
+  - fiscal_quarter
+  - fiscal_quarter_of_year
+  - fiscal_year
   - year
   sql: ${TABLE}."DATE"
 
