--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -88,7 +88,10 @@ fields:
   - week_of_year
   - month
   - month_of_year
-  - quarter
+  - fiscal_month
+  - fiscal_quarter
+  - fiscal_quarter_of_year
+  - fiscal_year
   - year
   sql: ${TABLE}."EXPECTED_CLOSE_DATE"
 
